--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "array-move": "^3.0.1",
     "axios": "^0.18.1",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
@@ -14,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
