--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-nba-logos": "^1.1.2",
+    "react-nfl-logos": "^1.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
