--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -24,7 +24,7 @@
     "react-sortable-hoc": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
-  "scripts": {вы
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
